Added impressum and privacy policy

--- a/impressum.html
+++ b/impressum.html
@@ -1,1 +1,30 @@
-<a href="https://www.flaticon.com/de/kostenlose-icons/diashow" title="diashow Icons">Diashow Icons erstellt von designvector10 - Flaticon</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Impressum</title>
+    <link rel="icon" href="./img/favicon.png" type="image/png" id="favicon">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/fonts.css">
+    <script src="./script/script.js"></script>
+</head>
+<body>
+    <div class="back-arrow"><a href="./index.html">←</a></div>
+    <div class="impressum-container">
+        <h1>Impressum</h1>
+        <b>Pascale Sennhauser</b><br>
+        ...<br>
+        ...<br>
+        Schweiz<br><br>
+        <b>E-Mail:</b> pascale.sennhauser@hotmail.ch<br><br>
+        <b>Quelle Bilder und Design: </b>
+        <ul>
+            <li><b>Images:</b> pixabay, <a href="https://pixabay.com/">https://pixaby.com/</a></li>
+            <li><b>Logo and Favicon:</b> Free Logo Maker, <a href="https://logomakr.com/">https://logomakr.com/</a></li>
+            <li><b>Diashow Icon:</b> Diashow Icons erstellt von designvector10 - Flaticon <a href="https://www.flaticon.com/de/kostenlose-icons/diashow">https://www.flaticon.com/de/kostenlose-icons/diashow</a></li>
+            <li><b>Other icons:</b> fontawesome, <a href="https://fontawesome.com/">https://fontawesome.com/</a></li>
+        </ul>
+    </div>
+</body>
+</html>
