--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nature Photos</title>
     <link rel="icon" href="./img/favicon.png" type="image/png" id="favicon">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./fonts.css">
-    <script src="./script.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/fonts.css">
+    <script src="./script/script.js"></script>
 </head>
 <body onload="render()">
     <div class="height">
@@ -42,7 +42,6 @@
 
         <footer>
             <div class="footer-max">
-                <span>Pascale Sennhauser</span>
                 <div class="impressum-datenschutz-container">
                     <a href="impressum.html" class="footer-link">Impressum</a> | 
                     <a href="datenschutz.html" class="footer-link">Datenschutz</a>
